<resources>
    <string name="app_name">GoHireWave</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_an_account">"Don't have an account? "</string>
    <string name="sign_in">"Sign In"</string>
    <string name="password_reset_request">Password Reset Request</string>
    <string name="you_will_get_link">You will get link on your registered Email address through which you can reset your password</string>
    <string name="get_reset_password_link">Get Reset Password Link</string>
    <string name="welcome_to">Welcome to</string>
    <string name="go_hire_wave">Go Hire Wave</string>
    <string name="first_name">First Name</string>
    <string name="your_first_name">Your First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="verify_email">Verify Email</string>
    <string name="please_verify_your_email_to_continue">Please verify your email to continue</string>
    <string name="check_your_email_address_linked">Check your Email address linked to this account. A link has been send to your Email</string>
    <string name="did_nt_recieved_code">Not Received Code?</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_saved_jobs">Saved Jobs</string>
    <string name="title_applied_jobs">Applied Jobs</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="search_icon">Search Icon</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="popular_companies">Popular Companies</string>
    <string name="recommended_jobs">Recommended Jobs</string>
    <string name="post_job">Post Job</string>
    <string name="find_job">Find Job</string>
    <string name="user_name">User Name</string>
    <string name="profession">Profession</string>
    <string name="percentage_value">0%</string>
    <string name="skills_proficiencies">Skills / Proficiencies</string>
    <string name="languages">Languages</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>