<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcomeToText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/welcome_to"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/goHireWaveText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/go_hire_wave"
                android:textColor="@color/main_color"
                android:textSize="27dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeToText" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edit_text_background"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goHireWaveText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/first_name"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/firstNameEditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/your_first_name"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/last_name"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/lastNameEditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/your_last_name"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/emailEditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    android:text="@string/password"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/passwordEditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    android:text="@string/confirm_password"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/passwordAgainEditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:padding="15dp"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/googleSignUpButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:padding="15dp"
                        android:text="@string/google"
                        android:textAllCaps="false"
                        android:textColor="@color/main_color"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/facebookSignUpButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:padding="15dp"
                        android:text="@string/facebook"
                        android:textAllCaps="false"
                        android:textColor="@color/main_color"
                        android:textSize="14sp" />
                </LinearLayout>



            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>