<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dim_color">


    <!-- Logo and Welcome Text -->
    <ImageView
        android:id="@+id/logoSignIn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoSignIn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_background"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoSignIn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/email"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/emailEditTextSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:padding="5dp"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/passwordEditTextSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

            <!-- Forget Password Button -->
            <TextView
                android:id="@+id/forgetPasswordTextSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="5dp"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

            <!-- Login Button -->
            <Button
                android:id="@+id/loginButtonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:padding="15dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/googleSignInButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:padding="15dp"
                    android:text="@string/google"
                    android:textAllCaps="false"
                    android:textColor="@color/main_color"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/facebookSignInButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:padding="15dp"
                    android:text="@string/facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/main_color"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dontHaveAnAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/signUpLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/signup"
                    android:textColor="@color/main_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>







</androidx.constraintlayout.widget.ConstraintLayout>
